Bug 502875 - Contribute button looks broken in RTL locales(Hebrew,Arabic) (Further fix); r=clouserw
git-svn-id: http://svn.mozilla.org/addons/trunk@29614 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main.css
+++ b/site/app/webroot/css/amo2009/main.css
@@ -1742,6 +1742,10 @@ form.favorite {
     margin:0 0.5em 0 1em;
 }
 
+.html-rtl .notification .continue {
+    margin:0 1em 0 0.5em;
+}
+
 .notification .continue a:link,
 .notification .continue a:visited,
 .notification .continue a:hover,
